ingress-default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movie-app-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: movie-app-backend
            port:
              number: 5000
